syntax = "proto3";
package service;

option go_package = "./proto";

import "google/protobuf/empty.proto";

service Storage {
  rpc Pull   (StorageRef)           returns (stream StorageParcel);
  rpc Push   (stream StorageParcel) returns (StorageRef);
  rpc Delete (StorageRef)           returns (google.protobuf.Empty);
  rpc Drop   (BucketRef)            returns (google.protobuf.Empty);
}

message BucketRef {
  string bucket = 1;
}

message StorageRef {
  string bucket = 1;
  string filename = 2;
}

message StorageParcel {
  uint32 size = 1;
  uint64 offset = 2;
  bytes payload = 3;
}
